# FastAPI-example

./: .pre-commit-config.yaml  pyproject.toml
migrations/: env.py
migrations/versions/: ed61b567789a_create_otp_table_and_user_table.py
src/config/: settings.py
src/schemas/: auth.py
src/services/: auth.py
tests/config/: test_company.py  test_db.py  test_sand_grid.py
tests/itest/: conftest.py
tests/itest/models/: test_models_sync.py
tests/schemas/: test_auth.py
tests/utest/config/: test_auth.py  test_logging.py  test_settings.py
tests/utest/models/: test_base.py  test_user.py
tests/utest/schemas/: test_auth.py
