[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.136.0",
    "jinja2>=3.1.6",
    "pyjwt>=2.12.1",
    "pytest>=9.0.3",
    "python-logging-loki>=0.3.1",
    "ruff>=0.15.11",
    "sendgrid>=6.12.5",
    "sqlalchemy[asyncio]>=2.0.49",
]

[tool.ruff]
line-length = 100
src = ["src"]


exclude = [
    ".git",
    ".venv",
    "migrations",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
]
